kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kibana.k8s-test.perit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-logging
                port:
                  number: 5601
